remove unnecessary retries